Styles included in the project
Now the project has some very basics styles using CSS.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Lasagna recipe</title>
-</head>
-<body>
-    <h1>The best lasagna recipe.</h1>
-    <img src="../images/lasagna.jpeg" alt="lasagna picture" height="500" width="590">
-    <br>
-    <h2>The less italian lasagna but also the most delicious one</h2>
-    <p>A classic lasagna recipe involves creating a hearty, layered dish from a few key components. The process begins by preparing a rich meat sauce, usually involving browned ground beef (and sometimes sausage), onion, and garlic simmered with crushed tomatoes and Italian seasonings.</p>
-    <p>Concurrently, a creamy cheese mixture is made by combining ricotta, mozzarella, and Parmesan cheeses, often bound with an egg and seasoned with fresh parsley or basil. Once the components are ready and the lasagna noodles are either boiled or prepared as "oven-ready", assembly begins in a baking dish with a thin layer of meat sauce on the bottom to prevent sticking.</p>
-    <h2>Ingredients:</h2>
-    <ul>
+  </head>
+  <body>
+    <div class="recipes-card">
+      <h1 class="tittle">The best lasagna recipe.</h1>
+      <img
+        src="../images/lasagna.jpeg"
+        alt="lasagna picture"
+        height="500"
+        width="590"
+      />
+      <br />
+      <h2>The less italian lasagna but also the most delicious one</h2>
+      <p>
+        A classic lasagna recipe involves creating a hearty, layered dish from a
+        few key components. The process begins by preparing a rich meat sauce,
+        usually involving browned ground beef (and sometimes sausage), onion,
+        and garlic simmered with crushed tomatoes and Italian seasonings.
+      </p>
+      <p>
+        Concurrently, a creamy cheese mixture is made by combining ricotta,
+        mozzarella, and Parmesan cheeses, often bound with an egg and seasoned
+        with fresh parsley or basil. Once the components are ready and the
+        lasagna noodles are either boiled or prepared as "oven-ready", assembly
+        begins in a baking dish with a thin layer of meat sauce on the bottom to
+        prevent sticking.
+      </p>
+      <h2>Ingredients:</h2>
+      <ul>
         <li>Ground meat</li>
         <li>Tomatoes</li>
         <li>Olive Oil</li>
@@ -22,33 +41,55 @@
         <li>Parmesan Cheese</li>
         <li>Lasagna Noodles</li>
         <li>Aromatics</li>
-    </ul>
-    <h2>Steps:</h2>
-    <ol>
+      </ul>
+      <h2>Steps:</h2>
+      <ol>
         <li>Cook the Noodles:</li>
         <ul>
-            <li>Bring a large pot of salted water to a boil.</li>
-            <li>Add the lasagna noodles and cook according to package directions until al dente (cooked but still firm).</li>
+          <li>Bring a large pot of salted water to a boil.</li>
+          <li>
+            Add the lasagna noodles and cook according to package directions
+            until al dente (cooked but still firm).
+          </li>
         </ul>
         <li>Make the Meat Sauce:</li>
-         <ul>
-            <li>In a large skillet or pot, heat a drizzle of olive oil over medium heat.</li>
-            <li>Add the ground beef (and Italian sausage, if using), onion, and garlic. Cook until the meat is browned and no pink remains, breaking it apart with a spoon. Drain any excess fat..</li>
+        <ul>
+          <li>
+            In a large skillet or pot, heat a drizzle of olive oil over medium
+            heat.
+          </li>
+          <li>
+            Add the ground beef (and Italian sausage, if using), onion, and
+            garlic. Cook until the meat is browned and no pink remains, breaking
+            it apart with a spoon. Drain any excess fat..
+          </li>
         </ul>
         <li>Prepare the Cheese Mixture:</li>
         <ul>
-            <li>In a medium bowl, combine the ricotta cheese, beaten egg, half of the shredded mozzarella, and half of the grated Parmesan cheese.</li>
-            <li>Stir in the fresh parsley or basil, salt, and pepper. Mix until well blended and creamy.</li>
+          <li>
+            In a medium bowl, combine the ricotta cheese, beaten egg, half of
+            the shredded mozzarella, and half of the grated Parmesan cheese.
+          </li>
+          <li>
+            Stir in the fresh parsley or basil, salt, and pepper. Mix until well
+            blended and creamy.
+          </li>
         </ul>
         <li>Assemble the Lasagna:</li>
         <ul>
-            <li>Spread a thin layer of meat sauce evenly across the bottom of the prepared baking dish to prevent the noodles from sticking.</li>
-            <li>Stir in the fresh parsley or basil, salt, and pepper. Mix until well blended and creamy.</li>
+          <li>
+            Spread a thin layer of meat sauce evenly across the bottom of the
+            prepared baking dish to prevent the noodles from sticking.
+          </li>
+          <li>
+            Stir in the fresh parsley or basil, salt, and pepper. Mix until well
+            blended and creamy.
+          </li>
         </ul>
         <li>Bake and Serve.</li>
         <li>Enjoy with your loved one ❤️</li>
-        
-    </ol>
-    <a href="../index.html">Home</a>
-</body>
+      </ol>
+      <a class="home-link" href="../index.html">Home</a>
+    </div>
+  </body>
 </html>
