--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="./recipes/bandeja.html">Bandeja Paisa Recipe</a></li>
-        <li><a href="./recipes/ajiaco.html">Ajiaco Recipe</a></li>
-    </ul>
-    
+    <div class="card">
+        <h1 class="tittle">Odin Recipes</h1>
+        <ul>
+            <li><a class="links" href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a class="links" href="./recipes/bandeja.html">Bandeja Paisa Recipe</a></li>
+            <li><a class="links" href="./recipes/ajiaco.html">Ajiaco Recipe</a></li>
+        </ul>
+    </div>
 </body>
 </html>
